Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages.

Changelog for smp_utils-0.97 [20110731] [svn:r98]
  - change binary install from /usr/bin to /usr/sbin
  - sync to SPL-2 (spl2r02)
  - take resid into account when calculating the actual
    response length

Changelog for smp_utils-0.96 [20110620] [svn:r96]
  - smp_conf_zone_perm_tbl, smp_conf_zone_man_pass
    smp_conf_zone_phy_info, smp_ena_dis_zoning,
    smp_rep_broadcast, smp_rep_phy_event, smp_rep_phy_event_list,
    smp_rep_self_conf_stat, smp_rep_zone_man_pass,
    smp_rep_zone_perm_tbl, smp_zone_activate, smp_zoned_broadcast,
    smp_zone_lock, smp_zone_unlock:
      add these new utilities
  - all utilities: sync to SPL-2 (spl2r01)
    -those with '--phy=ID' option: increase max from 128 to 254
  - smp_discover, smp_discover_list: add --adn and --summary
    - make --summary default if --phy=ID option not given
    - with --summary show disabled and errored phys
  - smp_discover: add --my and --zero option
  - smp_discover_list: add --zpi=FN option
  - smp_rep_general, smp_rep_manufacturer, smp_rep_phy_err_log,
    smp_rep_phy_sata: add --zero options
  - smp_conf_general: add --power option
  - smp_read_gpio, smp_write_gpio: add --enhanced option
  - add examples directory, mainly for zoning
  - remove doc/smp_utils.html , refer readers to web page
  - remove tpl (ai) interface

Changelog for smp_utils-0.95 [20101116] [svn:r47]
  - place link to smp_utils.html examples in man pages
  - alter Makefile for non-root users
  - add spl-r04 discover changes (spl is upper layers of sas-2.1)
  - mpt: cope with mpt2 ioctl that uses a different magic number

Changelog for smp_utils-0.94 [20081229] [svn:r40]
  - smp_discover: sync to sas2r15
  - smp_discover_list: sync to sas2r15
  - smp_rep_general: sync to sas2r15
  - smp_rep_exp_route_tbl: sync to sas2r15
  - smp_lib: sync to sas2r15